@@ -1,3 +1,11 @@
+2002-12-09  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/tcljava/tcl/lang/TclObject.java (disposedCheck):
+	Add helper method that will raise an error if
+	a TclObject method is called after the object
+	has been disposed of. Invoke this method at
+	the begining of each public TclOject api.
+
 2002-12-07  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* src/jacl/tcl/lang/CallFrame.java (chain,
